crates/tmc-langs-cli/tests/snapshots/integration__compress_project_zstd@csharp__failing-exercise.snap
---
source: crates/tmc-langs-cli/tests/integration.rs
expression: output
input_file: sample_exercises/csharp/failing-exercise
---
output-kind: output-data
status: finished
message: compressed project from [PATH] to [PATH]
result: executed-command
data:
  output-data-kind: compressed-project-hash
  output-data: e462287ce3ef7c155abf3f234a7275e5c568c737fa9355feae88313e9a0877d1
