crates/tmc-langs-cli/tests/snapshots/integration__compress_project_zstd@csharp__partially-passing.snap
---
source: crates/tmc-langs-cli/tests/integration.rs
expression: output
input_file: sample_exercises/csharp/partially-passing
---
output-kind: output-data
status: finished
message: compressed project from [PATH] to [PATH]
result: executed-command
data:
  output-data-kind: compressed-project-hash
  output-data: f9887325928a81c8b84c7a7fd457742606969f1504b47a8a8d7d562cc218c071
