crates/tmc-langs-cli/tests/snapshots/integration__compress_project_zstd@csharp__passing-exercise.snap
---
source: crates/tmc-langs-cli/tests/integration.rs
expression: output
input_file: sample_exercises/csharp/passing-exercise
---
output-kind: output-data
status: finished
message: compressed project from [PATH] to [PATH]
result: executed-command
data:
  output-data-kind: compressed-project-hash
  output-data: 5df82586cd7b62bf2bd2c0007edd8df07aceeb2d2b9e78cc725bbaef1af3e955
